[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/player/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerOnLand.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/floaty_64.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 6.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea2D/AttackCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "attack"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea2D/AttackCollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=16]
states/attack/node = SubResource( 22 )
states/attack/position = Vector2( 359, 170 )
states/idle/node = SubResource( 12 )
states/idle/position = Vector2( 222, 60 )
states/walk/node = SubResource( 13 )
states/walk/position = Vector2( 506, 60 )
transitions = [ "idle", "walk", SubResource( 14 ), "walk", "idle", SubResource( 15 ), "idle", "attack", SubResource( 23 ), "walk", "attack", SubResource( 24 ), "attack", "idle", SubResource( 25 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="CircleShape2D" id=11]
radius = 23.0868

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 16.5, 6 )

[sub_resource type="CanvasItemMaterial" id=19]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.698492, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="PlayerOnLand" type="KinematicBody2D" groups=["damageable"]]
collision_mask = 0
script = ExtResource( 2 )
base_speed = 150

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 6
vframes = 5

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 18 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
pause_mode = 2
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
modulate = Color( 0.203922, 0.478431, 0.239216, 1 )
shape = SubResource( 11 )

[node name="ShadeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShadeCooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2( 1.5, 4 )
shape = SubResource( 26 )
disabled = true

[node name="ShadeParticlesEffect" type="CPUParticles2D" parent="."]
material = SubResource( 19 )
emitting = false
amount = 2
lifetime = 0.2
speed_scale = 0.3
randomness = 0.2
lifetime_randomness = 0.25
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 3.0
spread = 180.0
gravity = Vector2( 0, -98 )
initial_velocity = 10.0
angular_velocity = 200.0
damping = 1.0
angle = 180.0
angle_random = 1.0
color = Color( 0, 5, 5, 0.55 )
color_ramp = SubResource( 21 )
hue_variation = 0.05
hue_variation_random = 1.0
anim_speed = 0.5
anim_speed_random = 0.4
__meta__ = {
"_editor_description_": ""
}

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="ShadeTimer" to="." method="_on_ShadeTimer_timeout"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_AttackArea2D_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
